# hmsl

./: .env.example  .env.offline  .gitignore  README.md  check.py  check_users.php  composer.json  count.php  debug_bill.php  deploy.sh  find_newborn.php  fix_properties.php  implementation_plan_webhooks_api.md  ipd_test_output.txt  outbound_test_output.txt  package-lock.json  package.json  response.json  tailwind.config.js  test_output.txt  test_pull.php
.trae/documents/: improve-counter-flows-ui-ux-plan.md  (+1 more)
app/DTOs/: ReportFilter.php
bootstrap/: app.php
config/: app.php  backup.php  cron.php  database.php  livewire.php  log-viewer.php  services.php  sync.php  webhooks.php
docs/: 00-project-setup.md  01-database-schema.md  02-folder-structure.md  03-phase0-foundation.md  04-phase1-opd.md  05-phase2-ipd.md  06-phase3-discharge.md  07-phase4-supporting.md  08-api-structure.md  09-ui-screens.md  10-task-master.md  11-webhooks.md  12-enhanced-reports.md  13-daily-automated-summary.md  14-additional-features.md  cron-jobs.md  offline-audit.md  system-audit.md
public/: splash.html
routes/: api.php  console.php  web.php
scratch/: debug_dob.php  debug_newborn_logic.php  fix_all_problems.php  launch_hms_local.ps1  setup-new-machine.ps1  test_admission.php  test_observer.php  test_push.php
tauri/: package-lock.json  package.json  php.ini.dist
tauri/src-tauri/: Cargo.toml  LICENSE.txt  build.rs  post-install.nsh  pre-install.nsh  tauri.conf.json
tauri/src-tauri/icons/: README.md  icon.icns
tauri/src-tauri/src/: main.rs
webapp/: package-lock.json  package.json
(+711 files in other folders)
