[package]
name = "hms-desktop"
version = "1.0.0"
description = "HMS Desktop - Offline-First Hospital Management"
authors = ["HMS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-all", "system-tray", "updater", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
