[package]
name = "hms-desktop"
version = "1.0.0"
description = "HMS Desktop - Offline-First Hospital Management"
authors = ["HMS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "notification-all", "shell-execute", "shell-open", "shell-sidecar", "system-tray", "window-all", "dialog", "notification", "global-shortcut", "window-data-url"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
ureq = "2.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
